--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -6,7 +6,7 @@
         <div class="mb-3">
           <label for="matricula" class="form-label">Matrícula</label>
           <input
-            type="text"
+            type="number"
             class="form-control"
             id="matricula"
             formControlName="id"
