Remove and Update

--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -4,15 +4,6 @@
       <h1 class="text-center">Cadastro de Alunos</h1>
       <form [formGroup]="formGroupStudent">
         <div class="mb-3">
-          <label for="matricula" class="form-label">Matrícula</label>
-          <input
-            type="number"
-            class="form-control"
-            id="matricula"
-            formControlName="id"
-          />
-        </div>
-        <div class="mb-3">
           <label for="nome" class="form-label">Nome</label>
           <input type="text"
                  class="form-control"
@@ -42,6 +33,7 @@
             <th scope="col">Matrícula</th>
             <th scope="col">Nome</th>
             <th scope="col">Curso</th>
+            <th class="d-flex justify-content-end" scope="col">Opções</th>
           </tr>
         </thead>
         <tbody>
@@ -49,6 +41,14 @@
             <th scope="row">{{student.id}}</th>
             <td>{{student.name}}</td>
             <td>{{student.course}}</td>
+            <td class="d-flex justify-content-end">
+               <button class="btn btn-danger me-2"
+                 (click)="delete(student)"
+               >Remover</button>
+               <button class="btn btn-primary"
+                 (click)="edit(student)"
+               >Alterar</button>
+            </td>
           </tr>
         </tbody>
       </table>
