--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -10,6 +10,12 @@
                  id="name"
                  formControlName="name"
                  />
+          <small *ngIf="submited && name.hasError('minlength')" class="text-danger">
+              * O nome tem que ter no mínimo 3 caracteres!
+          </small>
+          <small *ngIf="submited && name.hasError('required')" class="text-danger">
+            * O nome é requirido!
+        </small>
         </div>
         <div class="mb-3">
           <label for="curso" class="form-label">Curso</label>
@@ -18,6 +24,9 @@
                  id="curso"
                  formControlName="course"
                  />
+          <small  *ngIf="submited &&  course.hasError('required')" class="text-danger">
+                  * O curso é requirido!
+          </small>
         </div>
         <button type="submit"
                 class="btn btn-primary"
