--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -10,10 +10,10 @@
                  id="name"
                  formControlName="name"
                  />
-          <small *ngIf="name.touched && name.hasError('minlength')" class="text-danger">
+          <small *ngIf="isEditing && name.hasError('minlength')" class="text-danger">
               * O nome tem que ter no mínimo 3 caracteres!
           </small>
-          <small *ngIf="name.touched && name.hasError('required')" class="text-danger">
+          <small *ngIf="isEditing && name.hasError('required')" class="text-danger">
             * O nome é requirido!
         </small>
         </div>
@@ -24,13 +24,12 @@
                  id="curso"
                  formControlName="course"
                  />
-          <small  *ngIf="course.touched &&  course.hasError('required')" class="text-danger">
+          <small  *ngIf="isEditing &&  course.hasError('required')" class="text-danger">
                   * O curso é requirido!
           </small>
         </div>
         <button type="submit"
                 class="btn btn-primary"
-                [disabled]="!formGroupStudent.valid"
                 (click)="save()"
         >
               Salvar
